00-Importing-Local-Files

--- a/00-Importing-Local-Files.ipynb
+++ b/00-Importing-Local-Files.ipynb
@@ -105,11 +105,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4.36'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Exercise 1:"
+    "# Exercise 1:\n",
+    "#included header in the row count\n",
+    "datafile = open('./data/example_data2.txt', 'r')\n",
+    "data = []\n",
+    "for row in datafile:\n",
+    "    data.append(row.strip().split(','))\n",
+    "datafile.close()\n",
+    "data[3][2]"
    ]
   },
   {
@@ -166,11 +184,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4.36'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Exercise 2:"
+    "#Exercise 2:\n",
+    "#included header in the row count\n",
+    "import csv\n",
+    "datafile = open('./data/example_data2.txt', 'r')\n",
+    "datareader = csv.reader(datafile, delimiter=',')\n",
+    "data = []\n",
+    "for row in datareader:\n",
+    "    data.append(row)\n",
+    "data[3][2]"
    ]
   },
   {
@@ -245,11 +282,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.36"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Exercise 3:"
+    "#Exercise 3:\n",
+    "#included header in row count\n",
+    "import numpy\n",
+    "data = numpy.genfromtxt('./data/example_data2.txt', \n",
+    "                        delimiter = ',',\n",
+    "                        skip_header=False)\n",
+    "data[3,2]"
    ]
   },
   {
@@ -428,12 +482,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.36"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Exercise 4:\n",
+    "#did NOT include header in row count\n",
+    "import pandas as pd\n",
+    "data = pd.read_csv('./data/example_data2.txt')\n",
+    "data.values[2][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Exercise 4:"
-   ]
+   "source": []
   }
  ],
  "metadata": {
