--- a/02b-Extract-Statewide-HUCs-with-urllib.ipynb
+++ b/02b-Extract-Statewide-HUCs-with-urllib.ipynb
@@ -191,7 +191,16 @@
    "source": [
     "#Set the URLs\n",
     "ftpFolder2 = 'ftp://rockyftp.cr.usgs.gov/vdelivery/Datasets/Staged/LndCvr/Shape/'\n",
-    "stateFile2 = 'LNDCVR_Hawaii_State_Shape.zip'.format(state2)"
+    "stateFile2 = 'LNDCVR_Hawaii_State_Shape.zip'.format(state2)\n",
+    "\n",
+    "#Import modules\n",
+    "import os\n",
+    "import urllib\n",
+    "import zipfile #https://pymotw.com/2/zipfile/\n",
+    "import geopandas as gpd #http://geopandas.org/io.html\n",
+    "\n",
+    "#Allow maps to be shown inline...\n",
+    "%matplotlib inline"
    ]
   },
   {
